493-java-spring-boot/.kube/tea-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-deployment
  namespace: cafe-shop
  labels:
    app: tea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea-deployment
  template:
    metadata:
      labels:
        app: tea-deployment
    spec:
      containers:
      - name: tea-deployment
        image: localhost:32000/493-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
