493-java-spring-boot/.kube/tea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: cafe-shop
  labels:
    app: tea-deployment
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea-deployment
