493-java-spring-boot/.kube/cafe-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop.127.0.0.1.xip.io
  namespace: cafe-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/tea"
spec:
  rules:
  - host: shop.127.0.0.1.xip.io
    http:
      paths:
      - backend:
          service:
            name: tea-svc
            port:
              number: 8080
        path: /tea
        pathType: Prefix
